--- a/Rapport latex/Rapport NIDDAM_Benjamin.tex
+++ b/Rapport latex/Rapport NIDDAM_Benjamin.tex
@@ -21,7 +21,6 @@
 \end{center}
 
 \newpage
-
 \tableofcontents
 
 \newpage
@@ -154,6 +153,17 @@ Les méthodes présentées sont de deux types :
 \section{Présentation des tris}
 
 \section{Comparaison des algorithmes}
+\subsection{Lien avec les données}
+L’étude théorique des algorithmes n’est pas suffisante car l’efficacité de ces-derniers dépend
+aussi de l’ordre des données sur lesquelles on les utilise. Les algorithmes que nous allons considérés
+par la suite sont les tris :  \textit{tas}, \textit{compte}, \textit{fusion} et \textit{rapide}. Pour les étudier et les
+comparer, on se propose de créer plusieurs ensembles de données.
+On ordonnera les données toujours par ordre croissant. De plus, on donnera aux données un
+ordre prédéfini (avant le tri). Les jeux de données seront ordonnés : par ordre croissant de 0 à n,
+par ordre décroissant de n à 0 (inversé), aléatoirement sans redondance de donnée, aléatoirement
+avec redondance, aléatoirement mais de façon uniforme sans redondance et aléatoirement de façon
+uniforme mais avec redondance. D’autre part, on fera varié la taille de ces jeux de données (on
+aura par exemple n = 10, n = 500, n = 25000).
 
 \section{Conclusion}
 
