--- a/Rapport latex/Rapport NIDDAM_Benjamin.tex
+++ b/Rapport latex/Rapport NIDDAM_Benjamin.tex
@@ -156,7 +156,7 @@ Les méthodes présentées sont de deux types :
 \subsection{Lien avec les données}
 L’étude théorique des algorithmes n’est pas suffisante car l’efficacité de ces-derniers dépend
 aussi de l’ordre des données sur lesquelles on les utilise. Les algorithmes que nous allons considérés
-par la suite sont les tris :  \textit{tas}, \textit{compte}, \textit{fusion} et \textit{rapide}. Pour les étudier et les
+par la suite sont les tris : \textit{par tas}, \textit{compte}, \textit{fusion} et \textit{rapide}. Pour les étudier et les
 comparer, on se propose de créer plusieurs ensembles de données.
 On ordonnera les données toujours par ordre croissant. De plus, on donnera aux données un
 ordre prédéfini (avant le tri). Les jeux de données seront ordonnés : par ordre croissant de 0 à n,
